--- a/public/assets/styles.css
+++ b/public/assets/styles.css
@@ -8,18 +8,22 @@ body {
     font-weight: 400;
     font-style: normal;
     font-variation-settings: "wdth" 100;
-    background-color: #f8f9fa;
+    background: linear-gradient(0deg, rgba(225,0,0,1) 6%, rgb(244 202 18 / 71%) 100%);
+    min-height: 100vh;
+    overflow-x: hidden;
 }
-
 
 /* Background for Login and Signup Pages */
 .login-page, .signup-page {
     background: url('/images/ecomart-background.jpg') no-repeat center center fixed;
     background-size: cover;
     position: relative;
+    min-height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
 }
 
-/* Overlay with Blur Effect */
 .login-page::before, .signup-page::before {
     content: "";
     position: absolute;
@@ -29,10 +33,10 @@ body {
     height: 100%;
     background: inherit;
     filter: blur(8px);
-    z-index: -1;
+    -webkit-filter: blur(8px);
+    z-index: 0;
 }
 
-/* Ensure the form container appears above the background */
 .container {
     position: relative;
     z-index: 1;
@@ -40,7 +44,7 @@ body {
 
 /* Navbar */
 .navbar {
-    background-color: #343a40;
+    padding: 10px;
     font-family: 'Inter', sans-serif; /* Ensure Inter font is applied */
 }
 .navbar-brand, .nav-link {
@@ -78,7 +82,6 @@ body {
     background-color: #218838;
 }
 
-/* Buttons */
 .btn-danger {
     background-color: #dc3545;
     border: none;
